--- a/day00/ex02/doft.css
+++ b/day00/ex02/doft.css
@@ -74,10 +74,10 @@ body {
     margin-top: 5px;
 }
 .left_box img {
-    width: 46%;
-    margin-left: 23.5%;
-    margin-top: 3px;
-    margin-bottom: 6px;
+    width: 48%;
+    margin-left: 20%;
+    margin-top: 0px;
+    margin-bottom: 1px;
 }
 #brick {
     width: 120px;
@@ -101,33 +101,31 @@ body {
 }
 .bonjour {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-}
-.white_box {
-    position: absolute;
-    box-shadow: 1.5px 1.5px #ababac inset;
-    background-color: white;
-    width: 300px;
-    height: 11px;
-    border: 1px solid #cccccc;
-    padding: 5px;
+    font-size: 16px;
     margin-left: 5px;
-    margin-top: 2px;
-}
-.button {
-    position: absolute;
-    width: 70px;
-    height: 21.5px;
-    margin-top: -5px;
-    margin-left: 320px;
+    line-height: 2px;
 }
 .text_shadow {
     text-shadow: 4px 4px 4px #ff0000;
 }
 .entrez {
-    font-family: monospace;
-    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35px;
 }
-.repondre {
-    font-family: Arial, Helvetica, sans-serif;
+input {
+    width: 335px;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: 4px;
+    box-shadow: 0.5px 0.5px rgb(214, 214, 214) inset;
+}
+button {
+    position: absolute;
+    background-color: #e7e8f1;
+    margin-left: 353px;
+    height: 20px;
+    border: 0.5px solid rgb(180, 180, 180);
+    box-shadow: 0.2px 0.2px 0.5px grey inset;
+    border-radius: 1px;
+    margin-top: 10px;
 }
